[package]
name = "farfromanyroad"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
voronator = { git = "https://github.com/urholaukkarinen/voronator-rs.git", branch="include-circumcircles", default-features = false }
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
reqwest = "0.11"